# GRAP

./: CMakeLists.txt  README.md  cli.c  cli.h  graph.c  graph.h  helloworld.grap  helloworld.txt  interpreter.c  interpreter.h  language.bnf  lexer.c  lexer.h  main.c  module.grap  parser.c  parser.h  tokens.h
.github/workflows/: build.yml  build_windows.yml
DOCS/: README.md  bits.md  io.md  math.md  mem.md  module.md  str.md
demos/: README.md  bits.grap  chain.grap  circle.grap  helloworld.grap  input.grap  list.grap  math.grap  module.grap  str.grap
